# scuffed-note

./: Cargo.toml  readme.md
src/: main.rs  model.rs
