[package]
name = "scuffed-note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
rand = "0.8.5"
short-crypt = "1"
serde = "1"